--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,7 +3,8 @@ $color-secondary: #5637dd;
 $color-pale: #CEC8FF;
 $color-mid: #901CAD;
 $color-dark: #60106b;
-$color-transparent-black: rgba(0, 0, 0, 0.5);
+$color-teal: #17A2B8;
+$color-transparent-black : rgba(0, 0, 0, 0.5);
 
 body {
     font-family: "Open Sans", sans-serif;
@@ -14,22 +15,24 @@ h1, h2, h3 {
 }
 
 h2 {
-    color: #3046C5;
+    color: $color-primary;
 }
 
-header h2 {
-    color: #CEC8FF;
+header {
+    h2 {
+        color: $color-pale;
+    }
 }
 
 .site-footer {
-    background-image: linear-gradient(#CEC8FF, white);
+    background-image: linear-gradient($color-pale, white);
     padding: 20px 0;
 }
 
 .jumbotron {
     margin: 0;
     padding: 30px;
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+    background-image: linear-gradient(to right, $color-secondary, $color-primary, $color-dark);
     color: white;
 }
 
@@ -40,7 +43,7 @@ header h2 {
 }
 
 .navbar {
-    background-color: #901cad;
+    background-color: $color-mid;
 }
 
 #carouselButton {
@@ -56,9 +59,23 @@ header h2 {
 }
 
 .carousel-caption {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: $color-transparent-black;
 }
 
 .carousel {
-    border: solid #5637DD;
+    border: solid $color-secondary;
+}
+
+#reserveModal {
+    .modal-header {
+        background-color: $color-teal;
+        color:white;
+    }
+}
+
+#loginModal {
+    .modal-header {
+        background-color: $color-mid;
+        color:white;
+    }
 }
